--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license = "MPL-2.0"
 [tool.poetry.dependencies]
 python = "^3.8"
 GitPython = "^3.1.27"
+plotly = "^5.10.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
