docs: Cleanup repo and add docs for open sourcing

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# Files specific to this project
-hercules
-cubing.js/
+# Copyright (c) 2022 Joseph Hale
+# 
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
