--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,7 +32,7 @@ repos:
     hooks:
       - id: pytest-check
         name: pytest-check
-        entry: poetry run pytest
+        entry: poetry run pytest --ignore=repo
         language: system
         pass_filenames: false
         always_run: true
