--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -2,22 +2,22 @@ name: Run `pre-commit` on PRs
 
 on:
   pull_request:
-    branches: [ master, qa, dev ]
+    branches: [master, qa, dev]
   push:
-    branches: [ master, qa, dev ]
+    branches: [master, qa, dev]
 
 jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Install poetry
-      run: pipx install poetry
-    - uses: actions/setup-python@v4
-      with:
-        python-version: '3.8'
-        cache: 'poetry'
-    - run: poetry install
-    - uses: pre-commit/action@v3.0.0
-    - uses: pre-commit-ci/lite-action@v1.0.1
-      if: always()
+      - uses: actions/checkout@v3
+      - name: Install poetry
+        run: pipx install poetry
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.8"
+          cache: "poetry"
+      - run: poetry install
+      - uses: pre-commit/action@v3.0.0
+      - uses: pre-commit-ci/lite-action@v1.0.1
+        if: always()
