--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,8 +26,7 @@ repos:
   - repo: https://github.com/python-poetry/poetry
     rev: '1.3.2'
     hooks:
-      - id: poetry-check
-      - id: poetry-lock
+      - id: poetry-check  # Double-check the config formatting
   - repo: local
     hooks:
       - id: pytest-check
