--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 # Copyright (c) 2022 Joseph Hale
-# 
+#
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -24,9 +24,9 @@ repos:
       - id: mypy
         args: [--follow-imports=silent, --ignore-missing-imports]
   - repo: https://github.com/python-poetry/poetry
-    rev: '1.3.2'
+    rev: "1.3.2"
     hooks:
-      - id: poetry-check  # Double-check the config formatting
+      - id: poetry-check # Double-check the config formatting
   - repo: local
     hooks:
       - id: pytest-check
@@ -39,4 +39,4 @@ repos:
         name: Check OSS License Compliance
         entry: make --always-make license-check
         language: system
-        files: 'poetry.lock'
+        files: "poetry.lock"
