--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ mypy = "^1.13"
 pre-commit = "^3.5.0"
 pytest = "^8.3.3"
 liccheck = "^0.9.2"
+pytest-snapshot = "^0.9.0"
 
 [tool.liccheck]
 authorized_licenses = [
