--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@
 
 [tool.poetry]
 name = "git-authorship"
-version = "0.1.0"
-description = ""
+version = "0.1.1"
+description = "Interactive reports showing who wrote each line of code in your git repository."
 authors = ["Joseph Hale <me@jhale.dev>"]
 license = "MPL-2.0"
 
