--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,15 @@
 
 [tool.poetry]
 name = "git-authorship"
-version = "0.1.1"
+version = "0.1.2"
 description = "Interactive reports showing who wrote each line of code in your git repository."
 authors = ["Joseph Hale <me@jhale.dev>"]
 license = "MPL-2.0"
+readme = "README.md"
+homepage = "https://github.com/thehale/git-authorship"
+repository = "https://github.com/thehale/git-authorship"
+documentation = "https://github.com/thehale/git-authorship"
+keywords = [ "git", "blame", "authorship", "copyright", "relicensing", "SPDX", "SBOM" ]
 
 [tool.poetry.dependencies]
 python = "^3.8"
