--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@
 
 [tool.poetry]
 name = "git-authorship"
-version = "0.1.2"
+version = "0.1.3"
 description = "Interactive reports showing who wrote each line of code in your git repository."
 authors = ["Joseph Hale <me@jhale.dev>"]
 license = "MPL-2.0"
@@ -15,6 +15,9 @@ homepage = "https://github.com/thehale/git-authorship"
 repository = "https://github.com/thehale/git-authorship"
 documentation = "https://github.com/thehale/git-authorship"
 keywords = [ "git", "blame", "authorship", "copyright", "relicensing", "SPDX", "SBOM" ]
+
+[tool.poetry.scripts]
+git-authorship = "git_authorship.cli:main"
 
 [tool.poetry.dependencies]
 python = "^3.8"
