--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install poetry
-        run: pipx install poetry
+        run: pipx install poetry==1.8.5
       - uses: actions/setup-python@v4
         with:
           python-version: "3.8"
