--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,10 +19,11 @@ repos:
         # https://pre-commit.com/#top_level-default_language_version
         language_version: python3.8
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.902
+    rev: v1.14.1
     hooks:
       - id: mypy
         args: [--follow-imports=silent, --ignore-missing-imports]
+        additional_dependencies: [typing_extensions==4.12.2]
   - repo: https://github.com/python-poetry/poetry
     rev: "1.3.2"
     hooks:
