--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ git-authorship = "git_authorship.cli:main"
 python = "^3.8"
 GitPython = "^3.1.43"
 plotly = "^5.24.1"
+typing-extensions = "^4.12.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
@@ -46,6 +47,7 @@ authorized_licenses = [
     "LGPL-3.0",
     "MPL-2.0",
     "Mozilla Public License 2.0 (MPL 2.0)",
+    "Python Software Foundation",
     "Unlicense"
 ]
 unauthorized_licenses = [
