build: Allow usage of `PSF-2.0` licensed dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ authorized_licenses = [
     "MPL-2.0",
     "Mozilla Public License 2.0 (MPL 2.0)",
     "Python Software Foundation",
+    "PSF-2.0",
     "Unlicense"
 ]
 unauthorized_licenses = [
